addition of fast food photo

--- a/index.html
+++ b/index.html
@@ -10,14 +10,28 @@
   <body>
       <div class="container">
           <div id="overlay">
-        <div id="logo"> <img src="./logoBig.png" alt="Anitas logo"> </div>  
-        <h2>We Provide The Best food At The Right Price</h2>
-    <div class="menu">
-        <div id="#list"> <p>Happy Hour</p>
-        <p>Party Time</p></div>
-        <div class="bd"><img src="" alt=""></div>
+        <div id="logo"> <img src="./logoBig.png" alt="Anitas logo">  
+        <h2>We Provide The Best food At The <strong> Right Price</strong></h2></div> 
+    <main class="menu">
+        <div id="joint">
+        <div id="list"><p> Happy Hour</p></div>
+
+        <div id="PT"><p id="partytime">Party Time</p></div>
     </div>
+        
+        <div id="breakfast"><p>Breakfast </p> </div>
+        <div id="lunch">
+            <p>Lunch</p></div>
+        <div id="dinner"> <p>Dinner</p></div>
+
+
+    </main>
     </div>
       </div>
+     <div id="fast food photo">
+         <img src="./fastFood1.jpg" alt="fastFood1">
+         <h2>Fast Food</h2>
+         <h3>You'll love our delicious fast food</h3><p>Our food is quite lovely</p>
+     </div> 
   </body>
 </html> 
