addition of drink image

--- a/index.html
+++ b/index.html
@@ -19,19 +19,27 @@
         <div id="PT"><p id="partytime">Party Time</p></div>
     </div>
         
-        <div id="breakfast"><p>Breakfast </p> </div>
-        <div id="lunch">
+        <div id="breakfast"><img src="./foodtop/breakfast.jpg" alt="breakfast"><p>Breakfast </p> </div>
+        <div id="lunch"><img src="./foodtop/dinner2.jpg" alt="lunch">
             <p>Lunch</p></div>
-        <div id="dinner"> <p>Dinner</p></div>
+        <div id="dinner"> <img src="./foodtop/dinner.jpg" alt="Dinner"><p>Dinner</p></div>
 
 
     </main>
     </div>
       </div>
-     <div id="fast food photo">
-         <img src="./fastFood1.jpg" alt="fastFood1">
+     <div id="fastfoodphoto">
+        <div class="fastfoods"> <img src="./fastFood1.jpg" 
+         alt="fastFood1">
+         <img src="./fastFood2.jpg" alt="fastFood2"></div>
+        <div id="fastfoodtxt">  
          <h2>Fast Food</h2>
-         <h3>You'll love our delicious fast food</h3><p>Our food is quite lovely</p>
+         <h3>You'll love our delicious fast food</h3><p>Our food is quite lovely</p></div>
      </div> 
+     <div id="Drinks">
+        <div id="drinksphoto">
+            <img src="./drink1.jpg" alt="someone having a drink">
+        </div>
+     </div>
   </body>
 </html> 
