addition of food list menu

--- a/index.html
+++ b/index.html
@@ -35,11 +35,36 @@
         <div id="fastfoodtxt">  
          <h2>Fast Food</h2>
          <h3>You'll love our delicious fast food</h3><p>Our food is quite lovely</p></div>
+         <div id="viewG"> view Gallery</div>
      </div> 
      <div id="Drinks">
         <div id="drinksphoto">
             <img src="./drink1.jpg" alt="someone having a drink">
+            <img src="./drink2.jpg" alt="purp drink">
+
         </div>
+        <h2>Drinks</h2>
+        <h3>We also produce delicious drinks</h3>
+        <p>Our drinks are quite outstanding to believe</p>
+        <div class="view gallery">View Gallery</div>
+
+     </div>
+     <div id="foodlist-back">
+        <div id="foodlist-menu">
+            <nav>
+                <ul>
+                    <li><a href="#fastfood">Fast Food</a></li>
+                    <li><a href="#Drinks">Drinks</a></li>
+                    <li><a href="#chicken">Chicken</a></li>
+                    <li><a href="Rice"> Rice</a></li>
+                </ul>
+            </nav>
+            <div id="foodimages">
+                <img src="./fastfood/chickenBurger.jpg" alt="chickenBurger">
+                <p>chickenBurger</p>
+            </div>
+        </div>
+         <div></div>
      </div>
   </body>
 </html> 
