addition of beef burger menu image

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
             </nav>
             <div id="foodimages">
                 <img src="./fastfood/chickenBurger.jpg" alt="chickenBurger">
-                <p>chickenBurger</p>
+                <p>Chicken Burger</p>
+                <img src="./fastfood/beefBurger.jpg" alt="beefBurger">
+                <p>Beef Bufger</p>
             </div>
         </div>
          <div></div>
