addition of chicken pizza image menu

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
                 <p>Chicken Burger</p>
                 <img src="./fastfood/beefBurger.jpg" alt="beefBurger">
                 <p>Beef Bufger</p>
+                <img src="./fastfood/chickenPizza.jpg" alt="chickenPizza">
+                <p>Chicken Pizza</p>
             </div>
         </div>
          <div></div>
