addition of customer menu

--- a/index.html
+++ b/index.html
@@ -68,7 +68,14 @@
                 <p>Chicken Pizza</p>
             </div>
         </div>
-         <div></div>
+         <div id="customer">
+            <div id="happycustomer">
+                <h2>Our Happy Customers</h2>
+                <h3>Geroge Richard</h3>
+                <p>Great food! Menu is awesome. Their food is not only great but also in the right price.I'll highly recomend them :)</p>
+                <img src="./customers/" alt="">
+            </div>
+         </div>
      </div>
   </body>
 </html> 
