addition of customer images

--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
                 <h2>Our Happy Customers</h2>
                 <h3>Geroge Richard</h3>
                 <p>Great food! Menu is awesome. Their food is not only great but also in the right price.I'll highly recomend them :)</p>
-                <img src="./customers/" alt="">
+                <img src="./customers/p1.png" alt="customer1">
+                <img src="./customers/p2.png" alt="customer2">
+                <img src="./customers/p3.png" alt="customer3">
+                
             </div>
          </div>
      </div>
