--- a/index.html
+++ b/index.html
@@ -76,9 +76,16 @@
                 <img src="./customers/p1.png" alt="customer1">
                 <img src="./customers/p2.png" alt="customer2">
                 <img src="./customers/p3.png" alt="customer3">
-                
+
+            </div>
+            <div id="about"> 
+                <h2>About</h2>
+                <p>We are menu a little team of members, here to satisfy your tastes</p>
             </div>
          </div>
+     <div id="subscribe">
+         <h3>Get our daily food items deliverd to your email</h3>
+         
      </div>
   </body>
 </html> 
